--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.1",
     "hamburger-react": "^2.5.0",
     "install": "^0.13.0",
     "npm": "^8.10.0",
