--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "filmfan-moviedb",
-  "homepage": "/FilmFanDB",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/filmfan-moviedb",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
