--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "apple-touch-icon.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "180x180 144x144 60x60 152x152"
     },
     {
       "src": "logo512.png",
